--- a/03-post-process/ms-content/ms-content.Rmd
+++ b/03-post-process/ms-content/ms-content.Rmd
@@ -154,8 +154,15 @@ corr_compare_caption = "
 "
 
 WUL_change_fig_caption = "
-  Density-dependent survival relationships from egg (panels a-d) and parr (panels e-f) to smolt arriving at Lower Granite Dam (LGR) under current (solid lines) and increased (dashed lines) weighted usable habitat (WUL).
-  Egg $\\to$ LGR survival includes density effects that are both direct (e.g., egg survival varies as a function of egg density) and indirect (parr size varies as a function of egg density, and survival varies with size), whereas parr $\\to$ LGR survival includes only the indirect density effects.
+  Freshwater juvenile density-dependent relationships under current (solid lines) and increased (dashed lines) weighted usable habitat.
+  Panels (_a_-_d_): composite survival from egg to smolt at Lower Granite Dam (LGR) including both direct (i.e., egg density affects egg survival via Beverton-Holt dynamics) and indirect (i.e., egg density affects growth rates, size affects parr and smolt survival) density effects; panels (_e_-_h_): composite survival from parr to smolt at LGR which includes only indirect effects; panels (_i_-_l_): smolt reaching LGR.
+  Calculations operate based on density of juveniles -- _x_-axis converted to approximate spawner abundance (all ages, origins, and sexes) for ease of interpretation. Grey bands show the 95% credible region for the current relationship only; lines show posterior means.
+"
+
+obs_vs_fit_fig_caption = "
+  Consistency between model fitted values (posterior means) and nearly all data sources with an explicit likelihood function; only parr and smolt mean length data have been omitted here for space.
+  Each data point is one year for one population, with the exceptions of panels _g_, _h_, and _i_, which display values for both natural- and hatchery-origin survival rates, and in the cases of _h_ and _i_, these rates apply equally to all populations.
+  More detailed visualizations of model fit are shown in Supplement B (Section 3: model fits as time series with magnitude of observation uncertainty shown; Section 11: diagnostics based on quantile-standardized residuals; Section 12: posterior predictive checks).
 "
 ```
 
@@ -925,11 +932,11 @@ axis_labels(xlab = "Process Noise Correlation", xline = 1.25, outer = FALSE)
 
 \newpage
 
-```{r WUL-change-fig, fig.width = 7.2, fig.height = 4.5, eval = params$WUL_change_fig, fig.cap = WUL_change_fig_caption, time_it = TRUE}
+```{r WUL-change-fig, fig.width = 7.2, fig.height = 6, eval = params$WUL_change_fig, fig.cap = msdown::prep_caption(WUL_change_fig_caption), time_it = TRUE}
 
 prep_samples = function(j) {
   
-  # the parameters needed to calucate process model expected values
+  # the parameters needed to calculate process model expected values
   the_params = c("alpha[pop]", "beta[pop]", "^lambda$",
                  "omega0[pop]", "omega1[pop]", "mu_pi[1,pop]",
                  "gamma0[1,pop]", "gamma1[1,pop]",
@@ -958,10 +965,10 @@ prep_sample = function(the_samps, i, j) {
     L_Pb_center = unname(jags_data$L_Pb_center[j]),
     L_Mb_scale = unname(jags_data$L_Mb_scale[j]),
     L_Mb_center = unname(jags_data$L_Mb_center[j])
-    )
+  )
 }
 
-get_phi_hat = function(x, E, WUL_change = 0, start = "E") {
+get_phi_hat = function(x, E, WUL_change = 0, start = "E", out_type = "phi") {
   with(as.list(c(x, E = E, WUL_change = WUL_change)), {
     beta_hat = lambda * WUL
     
@@ -997,17 +1004,19 @@ get_phi_hat = function(x, E, WUL_change = 0, start = "E") {
     
     if (start == "E") out = Ma/E
     if (start == "Pb") out = Pb/E
-    return(out)
+    
+    if (out_type == "phi") return(out)
+    if (out_type == "Ma") return(Ma)
   })
 }
 
-get_phi_hat_post = function(j, E_pred, WUL_change = 0, start = "E") {
+get_phi_hat_post = function(j, E_pred, WUL_change = 0, start = "E", out_type = "phi") {
   
   the_samps = prep_samples(j = j)
   
   out = sapply(1:nrow(the_samps), function(i) {
     x = prep_sample(the_samps, i = i, j = j)
-    sapply(E_pred, function(e) get_phi_hat(x, E = e, WUL_change = WUL_change, start = start))
+    sapply(E_pred, function(e) get_phi_hat(x, E = e, WUL_change = WUL_change, start = start, out_type = out_type))
   })
   
   out = t(out)
@@ -1031,61 +1040,85 @@ get_phi_real_post = function(j, start = "E") {
   postpack::post_convert(cbind(postpack:::id_mat(post), phi))
 }
 
-plot_f = function(j, start, WUL_change) {
+plot_f = function(j, start, out_type) {
+  
+  WUL_changes = c(0.5, 1, 2)
+  lwd = 1.5
+  
+  eps = mean(post_summ(post, sub_index("E_per_Sa[year,pop]", year = ".+", pop = j))["mean",])
   phi_real_post = get_phi_real_post(j = j, start = start)
   phi_real = post_summ(phi_real_post, ".")
   E_real = post_summ(post, sub_index("^E[.+,pop]", pop = j))
-  E_pred = seq(min(E_real["mean",]), max(E_real["mean",]), length = 30)
+  # E_pred = seq(min(E_real["mean",]), max(E_real["mean",]), length = 30)
+  E_pred = seq(eps * 100, max(E_real["mean",]), length = 30)
+  keep_yrs = stringr::str_extract(colnames(E_real), "[:digit:]+,") |> 
+    stringr::str_remove(",")
   
-  phi_hat_post = get_phi_hat_post(j = j, E_pred, start = start)
+  S_pred = E_pred/eps
+  S_real = post_summ(post, sub_index("^Sa_tot[year,pop]", year = keep_yrs, pop = j))
+  
+  phi_hat_post = get_phi_hat_post(j = j, E_pred, start = start, out_type = out_type)
   phi_hat = post_summ(phi_hat_post, ".")
-  phi_hat_new_post = get_phi_hat_post(j = j, E_pred, WUL_change = WUL_change, start = start)
-  phi_hat_new = post_summ(phi_hat_new_post, ".")
   
-  plot(phi_real["mean",] ~ E_real["mean",], type = "n",
-       ylim = make_lim(0, phi_hat[c("2.5%","97.5%"),],
-                phi_hat_new[c("2.5%","97.5%"),]),
-                # phi_real["mean",]),
+  phi_hat_new1_post = get_phi_hat_post(j = j, E_pred, WUL_change = WUL_changes[1], start = start, out_type = out_type)
+  phi_hat_new1 = post_summ(phi_hat_new1_post, ".")
+  phi_hat_new2_post = get_phi_hat_post(j = j, E_pred, WUL_change = WUL_changes[2], start = start, out_type = out_type)
+  phi_hat_new2 = post_summ(phi_hat_new2_post, ".")
+  phi_hat_new3_post = get_phi_hat_post(j = j, E_pred, WUL_change = WUL_changes[3], start = start, out_type = out_type)
+  phi_hat_new3 = post_summ(phi_hat_new3_post, ".")
+  
+  plot(phi_real["mean",] ~ S_real["mean",], type = "n",
+       ylim = make_lim(0, phi_hat[c("2.5%","97.5%"),], phi_hat_new3["mean",]),
+       # phi_real["mean",]),
        # ylim = make_lim(0, ifelse(start == "E", 0.075, 0.3)),
-       xlim = c(0, max(E_real["mean",], E_pred)),
-       xaxt = "n")
+       xlim = c(0, max(S_real["mean",], S_pred)),
+       xaxt = "n", yaxt = "n")
   
-  # points(phi_real["mean",] ~ E_real["mean",], pch = 21, 
+  # points(phi_real["mean",] ~ S_real["mean",], pch = 21,
   #        col = "black", bg = scales::alpha("grey25", 0.25), cex = 0.8)
   
-  polygon(x = c(E_pred, rev(E_pred)), 
+  polygon(x = c(S_pred, rev(S_pred)), 
           y = c(phi_hat["2.5%",], rev(phi_hat["97.5%",])),
           col = tranp_col, border = NA)
-  lines(phi_hat["mean",] ~ E_pred, lwd = 2)
-  lines(phi_hat["2.5%",] ~ E_pred)
-  lines(phi_hat["97.5%",] ~ E_pred)
   
-  polygon(x = c(E_pred, rev(E_pred)), 
-          y = c(phi_hat_new["2.5%",], rev(phi_hat_new["97.5%",])),
-          col = tranp_col, border = NA)
-  lines(phi_hat_new["mean",] ~ E_pred, lwd = 2, lty = 2)
-  lines(phi_hat_new["2.5%",] ~ E_pred,  lty = 2)
-  lines(phi_hat_new["97.5%",] ~ E_pred, lty = 2)
+  lines(phi_hat["mean",] ~ S_pred, lwd = lwd)
+  lines(phi_hat_new1["mean",] ~ S_pred, lty = 3, lwd = lwd)
+  lines(phi_hat_new2["mean",] ~ S_pred, lty = 2, lwd = lwd)
+  lines(phi_hat_new3["mean",] ~ S_pred, lty = 5, lwd = lwd)
+  
   at_x = axisTicks(par("usr")[1:2], log = FALSE)
-  axis(side = 1, at = at_x, labels = at_x/1e6)
-  panel_label(paste0("(", letters[ifelse(start == "E", 0, 3) + j], ") ", pops[j]))
+  axis(side = 1, at = at_x, labels = at_x/1000)
+  
+  at_y = axisTicks(par("usr")[3:4], log = FALSE)
+  axis(side = 2, at = at_y, labels = at_y/ifelse(out_type == "Ma", 1000, 1))
+  
+  base = ifelse(start == "E", 0, 4)
+  base = ifelse(out_type == "Ma", 8, base)
+  panel_label(paste0("(", letters[base + j], ") "))
   
   if (j == 1) {
-    if (start == "E") {
-      axis_labels(ylab = "Egg \u2192 LGR Survival", outer = FALSE, yline = 1)
-      legend("topright", title = "WUL", legend = c("Current", paste0("\u2191", WUL_change * 100, "%")), lty = c(1,2), seg.len = 1.5, bty = "n", cex = 0.8)
+    if (start == "E" & out_type == "phi") {
+      axis_labels(ylab = "Egg \u2192 LGR Survival", outer = FALSE, yline = 2)
+      legend("topright", title = "Weighted Habitat", legend = c("Current", paste0("\u2191", WUL_changes * 100, "%")), lty = c(1,3,2,5), seg.len = 2.7, bty = "n", lwd = lwd, cex = 0.9)
     } 
-    if (start == "Pb") axis_labels(ylab = "Parr \u2192 LGR Survival", outer = FALSE, yline = 1)
+    if (start == "Pb" & out_type == "phi") axis_labels(ylab = "Parr \u2192 LGR Survival", outer = FALSE, yline = 2)
+    if (out_type == "Ma") {
+      axis_labels(ylab = "LGR Smolt", outer = FALSE, yline = 2)
+      axis_labels(ylab = "Thousands", outer = FALSE, yline = 1, cex = 0.8, font = 3)
+    } 
   }
   
-  
-  
+  if (start == "E" & out_type == "phi") {
+    mtext(side = 3, line = 0.15, font = 2, text = pops[j], cex = 1)
+  }
 }
 
-mypar(mfrow = c(2,4), col.axis = "black")
-junk = sapply(1:4, function(j) plot_f(j, "E", 1))
-junk = sapply(1:4, function(j) plot_f(j, "Pb", 1))
-axis_labels(xlab = "Egg Production (Millions)")
+mypar(mfrow = c(3,4), oma = c(2.5,2.5,1,0), col.axis = "black")
+junk = sapply(1:4, function(j) plot_f(j, "E", "phi"))
+junk = sapply(1:4, function(j) plot_f(j, "Pb", "phi"))
+junk = sapply(1:4, function(j) plot_f(j, "Pb", "Ma"))
+axis_labels(xlab = "Spawner Abundance")
+axis_labels(xlab = "Thousands", outer = TRUE, xline = 1.5, cex = 0.8, font = 3)
 ```
 
 \newpage
