Update scenario name

--- a/03-post-process/ms-content/ms-content.Rmd
+++ b/03-post-process/ms-content/ms-content.Rmd
@@ -5,7 +5,7 @@ output:
 params:
   scenario:
     label: "Scenario"
-    value: "base_vlong"
+    value: "new-wul_vlong"
     input: text
   thin_percent:
     label: "Proportion of Posterior Samples to Retain?"
